slightly better format

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Dustin Axman</title>
+</head>
+<body>
+    <h1>About me</h1>
+    <p>TODO</p>
+    <ul>
+        <li><a href="resume.pdf">My Resume</a></li>
+        <li><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=ge5H0-oAAAAJ">My Publications</a></li>
+    </ul>
+</body>
+</html>
