make it a bit prettier

--- a/index.html
+++ b/index.html
@@ -2,13 +2,24 @@
 <html>
 <head>
     <title>Dustin Axman</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h1>About me</h1>
-    <p>TODO</p>
-    <ul>
-        <li><a href="resume.pdf">My Resume</a></li>
-        <li><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=ge5H0-oAAAAJ">My Publications</a></li>
-    </ul>
+    <header>
+        <img src="profile.jpg" alt="Dustin Axman" class="profile-pic">
+        <h1>Dustin Axman</h1>
+        <p>ML Research Scientist</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="resume.pdf">My Resume</a></li>
+            <li><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=ge5H0-oAAAAJ">My Publications</a></li>
+        </ul>
+    </nav>
+    <section>
+        <h2>About Me</h2>
+        <p>Welcome! I'm Dustin Axman, an ML Research Scientist with experience at Amazon. Here you can find my resume and publications.</p>
+    </section>
 </body>
 </html>
+
