--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <img src="profile.jpg" alt="Dustin Axman" class="profile-pic">
+        <img src="linkedin_profile_pic.heic" alt="Dustin Axman" class="profile-pic">
         <h1>Dustin Axman</h1>
         <p>ML Research Scientist</p>
     </header>
