--- a/index.html
+++ b/index.html
@@ -6,20 +6,37 @@
 </head>
 <body>
     <header>
-        <img src="linkedin_profile_pic.heic" alt="Dustin Axman" class="profile-pic">
+        <img src="linkedin_profile_pic_onlyface.jpg" alt="Dustin Axman" class="profile-pic">
         <h1>Dustin Axman</h1>
         <p>ML Research Scientist</p>
     </header>
     <nav>
         <ul>
             <li><a href="resume.pdf">My Resume</a></li>
-            <li><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=ge5H0-oAAAAJ">My Publications</a></li>
+            <li><a href="https://github.com/dustinaxman">Github</a></li>
+            <li><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=ge5H0-oAAAAJ">Google Scholar Page</a></li>
+            <li><a href="https://www.linkedin.com/in/dustinaxman">LinkedIn</a></li>
         </ul>
     </nav>
-    <section>
-        <h2>About Me</h2>
-        <p>Welcome! I'm Dustin Axman, an ML Research Scientist with experience at Amazon. Here you can find my resume and publications.</p>
-    </section>
+<section>
+    <h2>About Me</h2>
+    <p>Welcome! I'm Dustin Axman, an ML Research Scientist based in San Francisco with past experience at:
+    <ul>
+        <li>Amazon Alexa (6.5 years), working on LLMs for everything from NER and Paraphrasing, to multilingual subspace alignment and contextual understanding. </li>
+        <li><a href="http://humansensing.cs.cmu.edu/">CMU Human Sensing Lab</a> (3 years), where studied cardiac arrest and arrythmia </li>
+        <li><a href="https://www.lle.rochester.edu/">The Laboratory for Laser Energetics (LLE)</a> (~5 years on and off)</li> 
+    </ul>
+    I love working on problems in the most impactful areas, especially ML applications for medicine, educational technology, and fusion.</p>
+    <p>Outside of ML, I try to fill my time with:</p>
+    <ul>
+        <li><b>Music:</b> I play viola and guitar. I've been trying to pick up trumpet for ages now but it hasn't clicked yet</li>
+        <li><b>Camping:</b> I do everything from car camping to backpacking, but canoe camping is my favorite</li>
+        <li><b>Travel:</b> loved traveling to Harbin recently and am trying to learn Mandarin (but I'm horrible)</li>
+    </ul>
+    Please feel free to reach out over <a href="https://www.linkedin.com/in/dustinaxman">linkedin</a> or <a href="https://x.com/DustinAxman">twitter</a> if you have any fun or impactful projects you'd like to work on together. Happy to chat anytime! 
+</section>
 </body>
 </html>
+
+
 
