--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <ul>
         <li><b>Music:</b> I play viola and guitar. I've been trying to pick up trumpet for ages now but it hasn't clicked yet</li>
         <li><b>Camping:</b> I do everything from car camping to backpacking, but canoe camping is my favorite</li>
-        <li><b>Travel:</b> loved traveling to Harbin recently and am trying to learn Mandarin (but I'm horrible)</li>
+        <li><b>Travel:</b> I loved traveling to Harbin recently and have been working to learn Mandarin for about 1.5 years (still not good but having fun)</li>
     </ul>
     Please feel free to reach out over <a href="https://www.linkedin.com/in/dustinaxman">linkedin</a> or <a href="https://x.com/DustinAxman">twitter</a> if you have any fun or impactful projects you'd like to work on together. Happy to chat anytime! 
 </section>
