bold places of work

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <h2>About Me</h2>
     <p>Welcome! I'm Dustin Axman, an ML Research Scientist based in San Francisco with past experience at:
     <ul>
-        <li>Chaser (1 year), building an automated service for user task tracking from plain conversations.
-        <li>Amazon Alexa (6.5 years), working on LLMs and other models for everything from NER and Paraphrasing, to multilingual subspace alignment and contextual understanding. </li>
-        <li>Carnegie Mellon University (Machine Learning and robotics) (3 years), where I conducted research on time series ML methods for stress detection, as well as cardiac arrest and arrythmia prediction. </li>
-        <li><a href="https://www.lle.rochester.edu/">The Laboratory for Laser Energetics (LLE)</a> (~5 years on and off), doing everything from power conditioning with FPGAs to building UIs for showing fusion target illumination symmetry.</li> 
+        <li><b>Chaser (1 year)</b>, building an automated service for user task tracking from plain conversations.
+        <li><b>Amazon Alexa (6.5 years)</b>, working on LLMs and other models for everything from NER and Paraphrasing, to multilingual subspace alignment and contextual understanding. </li>
+        <li><b>Carnegie Mellon University (Machine Learning and robotics) (3 years)</b>, where I conducted research on time series ML methods for stress detection, as well as cardiac arrest and arrythmia prediction. </li>
+        <li><b><a href="https://www.lle.rochester.edu/">The Laboratory for Laser Energetics (LLE)</a> (~5 years on and off)</b>, doing everything from power conditioning with FPGAs to building UIs for showing fusion target illumination symmetry.</li> 
     </ul>
     I love working on problems in the most impactful areas, especially ML applications for medicine, educational technology, and fusion.</p>
     <p>Outside of ML, I try to fill my time with:</p>
